--- a/app/assets/stylesheets/user_show.scss
+++ b/app/assets/stylesheets/user_show.scss
@@ -36,11 +36,40 @@
   }
 }
 
+//自己紹介文
+.user-description{
+  padding: 30px 50px 60px;
+  p{
+    font-size: 16px;
+  }
+}
+
+//タブ切り替え部分
+.tab-group{
+  display: flex;
+  justify-content: space-between;
+  .tab{
+    flex-grow: 1;
+    padding:5px;
+    list-style:none;
+    background-color: #f5f5f5;
+    text-align:center;
+    line-height: 72px;
+    cursor:pointer;
+  }
+  .is-active{
+    border-top: 2px solid #3EC1C9;
+    transition: all 0.2s ease-out;
+    background-color: #fff;
+  }
+}
+
 //募集中の動物一覧
-.user-messages{
+.user-recuruitment-animals{
   padding: 10px;
   &__box{
     p{
+      padding-top: 24px;
       font-size: 16px;
       font-weight: bold;
       color: #484848;
@@ -48,26 +77,108 @@
   }
 }
 
-.giving-animals__animal{
-  margin: 20px 0;
-  display: flex;
-  &--photo{
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    img{
-      width: 100%;
-      height: 100%;
-      border-radius: 50%;
+.tab-contents{
+  .giving-animals{
+    display: none;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 20px;
+    &--link{
+      margin-top: 20px;
+      text-decoration: none;
+      cursor: pointer;
+      &__animal{
+        &--photo{
+          img{
+            height: 220px;
+            width: 220px;
+          }
+        }
+        &--content{
+          display: flex;
+          &--name{
+            margin-right: 10px;
+          }
+          &--male{
+            .fas{
+              color: blue;
+              font-size: 16px;
+              line-height: 24px;
+            }
+          }
+          &--female{
+            .fas{
+              color: red;
+              font-size: 16px;
+              line-height: 24px;  
+            }
+          }
+          &--unknown{
+            color: #aaa;
+            font-size: 12px;
+            line-height: 24px;
+          }
+        }
+      }
     }
   }
-  &--name{
+  .is-show{
+    display: flex;
+  }
+}
 
+//取引メッセージ一覧
+.giving-animals__messages{
+  width: 100%;
+  padding: 30px;
+  .giving-animals__messages__link{
+    text-decoration: none;
+    display: block;
+    padding: 10px;
+    margin: 10px;
+    &--message{
+      display: flex;
+      justify-content: space-between;
+      &--from{
+        display: flex;
+        &--icon{
+          width: 70px;
+          height: 70px;
+          img{
+            width: 100%;
+            height: 100%;
+          }
+        }
+        &--name{
+          line-height: 70px;
+          margin-left: 20px;
+        }
+      }
+      &--content{
+        text-align: right;
+        line-height: 35px;
+        &__new{
+          color: #484848;
+          font-size: 14px;
+          font-weight: 600;
+        }
+        &__time{
+          font-size: 12px;
+          color: #aaa;
+        }
+        p{
+          color: #aaa;
+          font-size: 14px;
+        }
+      }
+    }
   }
 }
 
 //アカウント削除ボタン
 .account-btns{
+  border-top: 2px solid #efefef;
+  padding: 40px 60px;
   display: flex;
   justify-content: center;
   &__edit{
