--- a/app/assets/stylesheets/animal_index.scss
+++ b/app/assets/stylesheets/animal_index.scss
@@ -47,13 +47,12 @@
   width: 100%;
   &__content{
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
     margin-top: 40px;
   }
 }
 .animal-show__link{
-  margin-top: 20px;
+  margin: 20px 5px;
   cursor: pointer;
   display: block;
   width: 240px;
