里親決定機能
# What
room controller内にtransactionアクションを設置
updateでanimalにtaker_idがふられるように設定
# Why
里親を決定する機能を実装するため

--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -49,10 +49,12 @@
       <% if @animal.giver_id == current_user.id %>
         <div class="counterparty-information__judge">
           <div class="counterparty-information__judge--yes">
-            <button>
-              <i class="far fa-handshake"></i>
-              <p>里親成立</p>
-            </button>
+            <%= link_to animal_room_transaction_path(animal_id: @animal.id, room_id: @room.id) do%>
+              <button>
+                <i class="far fa-handshake"></i>
+                <p>里親成立</p>
+              </button>
+            <% end %>
           </div>
           <div class="counterparty-information__judge--no">
             <button>
