--- a/app/assets/stylesheets/room_show.scss
+++ b/app/assets/stylesheets/room_show.scss
@@ -217,6 +217,8 @@
         background-color: #aaa;
         border: 1px solid #aaa;
         color: #fff;
+        text-align: center;
+        line-height: 48px;
       }
     }
   }
