roomsモデルの変更
# What
room_userテーブルを削除
Roomテーブルにhost_idとclient_idを作成
Usersテーブルへ紐づけ
各種viewの編集
# Why
後々の変更に強くするため

--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -161,7 +161,7 @@
           <% end %>
         </div>
       <% else %>
-        <%= link_to animal_rooms_path(animal_id: @animal.id ,room: {animal_id: @animal.id, user_ids: [@animal.giver_id, current_user.id]}), method: :post do%>
+        <%= link_to animal_rooms_path(animal_id: @animal.id ,room: {animal_id: @animal.id, host_id: @animal.giver_id, client_id: current_user.id}), method: :post do%>
           <button class="animal_taker">里親に応募する</button>
         <% end %>
       <% end %>
