--- a/app/views/layouts/animals.html.erb
+++ b/app/views/layouts/animals.html.erb
@@ -12,18 +12,29 @@
 
   <body>
     <div class="header">
-      <a href="/" class="header--icon">
-        <%= image_tag 'logo_bottom.png' %>
-      </a>    
-      <ul class="header--lists">
-        <li class="header--lists--list">
-          <%= link_to "#{current_user.name}", user_path(id: current_user.id) %>
-        </li>
-        <li class="header--lists--list">HELP</li>
-        <li class="header--lists--list">
-          <%= link_to "SIGN OUT", destroy_user_session_path, method: :delete %>
-        </li>
-      </ul>
+      <% if user_signed_in?%>
+        <a href="/" class="header--icon">
+          <%= image_tag 'logo_bottom.png' %>
+        </a>    
+        <ul class="header--lists">
+          <li class="header--lists--list">
+            <%= link_to "#{current_user.name}", user_path(id: current_user.id) %>
+          </li>
+          <li class="header--lists--list">HELP</li>
+          <li class="header--lists--list">
+            <%= link_to "SIGN OUT", destroy_user_session_path, method: :delete %>
+          </li>
+        </ul>
+      <% else %>
+        <a href="/" class="header--icon">
+          <%= image_tag 'logo_bottom.png' %>
+        </a>    
+        <ul class="header--lists">
+          <li class="header--lists--list">HELP</li>
+          <li class="header--lists--list">SIGN IN</li>
+          <li class="header--lists--list">SIGN UP</li>
+        </ul>
+      <% end %>
     </div>
     <%= yield %>
   </body>
