--- a/app/assets/stylesheets/animal_index.scss
+++ b/app/assets/stylesheets/animal_index.scss
@@ -73,7 +73,7 @@
 
     &-prefecture{
       position: absolute;
-      top: 10px;
+      bottom: 10px;
       color: #fff;
       font-weight: 500;
       font-size: 12px;
@@ -91,6 +91,28 @@
       border-bottom-right-radius : 8px;
       -webkit-border-bottom-right-radius: 8px;
       -moz-border-radius-bottomright: 8px;
+    }
+    .buied_item{
+      width: 0;
+      height: 0;
+      border-style: solid;
+      border-width: 100px 100px 0 0;
+      border-color: #3EC1C9 transparent transparent transparent;
+      position: absolute;
+      top: 0;
+      left: 0;
+      padding-top: 10px;
+      &:after{
+        content: "Desided";
+        display: block;
+        color: #fff;
+        transform: rotate(-45deg);
+        letter-spacing: 2px;
+        font-weight: 600;
+        position: absolute;
+        top: -70px;
+        left: 0px;
+      }
     }
   }
   &--name{
