--- a/app/assets/stylesheets/animal_show.scss
+++ b/app/assets/stylesheets/animal_show.scss
@@ -16,6 +16,29 @@
         transition-duration: 0.3s;
       }
     }
+    .buied_item{
+      width: 0;
+      height: 0;
+      border-style: solid;
+      border-width: 150px 150px 0 0;
+      border-color: #3EC1C9 transparent transparent transparent;
+      position: absolute;
+      top: 138px;
+      left: 1px;
+      padding-top: 10px;
+      &:after{
+        content: "Desided";
+        font-size: 20px;
+        display: block;
+        color: #fff;
+        transform: rotate(-45deg);
+        letter-spacing: 2px;
+        font-weight: 600;
+        position: absolute;
+        top: -100px;
+        left: 10px;
+      }
+    }
   }
   &__image-right{
     height: 500px;
