--- a/app/assets/stylesheets/user_show.scss
+++ b/app/assets/stylesheets/user_show.scss
@@ -6,7 +6,7 @@
   border-top: 50px solid #EFEFEF;
   border-bottom: 100px solid #EFEFEF;
   margin: 0 auto;
-  width: 800px;
+  width: 700px;
   background-color: #fff;
 }
 
@@ -81,17 +81,39 @@
   .giving-animals{
     display: none;
     flex-wrap: wrap;
-    justify-content: space-between;
     padding: 20px;
     &--link{
-      margin-top: 20px;
+      margin: 20px 5px 0;
       text-decoration: none;
       cursor: pointer;
       &__animal{
         &--photo{
+          position: relative;
           img{
-            height: 220px;
-            width: 220px;
+            height: 210px;
+            width: 210px;
+          }
+          .buied_item{
+            width: 0;
+            height: 0;
+            border-style: solid;
+            border-width: 100px 100px 0 0;
+            border-color: #3EC1C9 transparent transparent transparent;
+            position: absolute;
+            top: 0;
+            left: 0;
+            padding-top: 10px;
+            &:after{
+              content: "Desided";
+              display: block;
+              color: #fff;
+              transform: rotate(-45deg);
+              letter-spacing: 2px;
+              font-weight: 600;
+              position: absolute;
+              top: -70px;
+              left: 0px;
+            }
           }
         }
         &--content{
@@ -144,6 +166,7 @@
         &--icon{
           width: 70px;
           height: 70px;
+          position: relative;
           img{
             width: 100%;
             height: 100%;
@@ -174,6 +197,7 @@
     }
   }
 }
+
 
 //アカウント削除ボタン
 .account-btns{
@@ -211,7 +235,17 @@
   }
 }
 
-.adopt-status{
+.dicision__yes{
+  font-size: 12px;
+  color: #3EC1C9;
+  line-height: 70px;
+  margin-left: 10px;
+  font-weight: 600;
+}
+.dicision__no{
   font-size: 12px;
   color: #AAAAAA;
+  line-height: 70px;
+  margin-left: 10px;
+  font-weight: 600;
 }
