--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -47,24 +47,18 @@
       <div class="counterparty-information__prefecture">
       </div>
       <% if @animal.giver_id == current_user.id %>
-        <div class="counterparty-information__judge">
-          <div class="counterparty-information__judge--yes">
-            <%= link_to animal_room_transaction_path(animal_id: @animal.id, room_id: @room.id) do%>
-              <button>
-                <i class="far fa-handshake"></i>
-                <p>里親成立</p>
-              </button>
-            <% end %>
+        <% if @animal.taker_id.blank?%>
+          <div class="counterparty-information__judge">
+            <div class="counterparty-information__judge--yes">
+              <%= link_to animal_room_transaction_path(animal_id: @animal.id, room_id: @room.id) do%>
+                <button>
+                  <i class="far fa-handshake"></i>
+                  <p>この人に里親決定</p>
+                </button>
+              <% end %>
+            </div>
           </div>
-          <div class="counterparty-information__judge--no">
-            <%= link_to animal_room_unsuccessful_path(animal_id: @animal.id, room_id: @room.id) do%>
-              <button>
-                <i class="fa fa-heartbeat"></i>
-                <p>里親不成立</p>
-              </button>
-            <% end %>
-          </div>
-        </div>
+        <% end %>
       <% end %>
     </div>
     <div class="private-chat">
@@ -119,8 +113,22 @@
         </div>
         <%= form_with(model: [@animal, @room, @message], local: true, id: "new_message") do |f| %>
           <%= f.text_area :content, placeholder: "メッセージを送る", class: "form__textbox"%>
-          <% if @room.status == 1 %>
-            <div class="form__submit">里親不成立となりました</div>
+          <% if @animal.taker_id %>
+            <% if @animal.taker_id == @client.id %>
+              <% if @animal.giver_id == @host.id %>
+                <div class="form__submit">
+                  <%= @client.name%>が里親に決定しました！
+                </div>
+              <% else %>
+                <div class="form__submit">
+                あなたが里親です！
+                </div>
+              <% end %>
+            <% else %>
+              <div class="form__submit">
+              他の人が里親に決定しました！
+              </div>
+            <% end %>
           <% else %>
             <%= f.submit "送信", class: "form__submit" %>
           <% end %>
