--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -132,7 +132,7 @@
                 margin-bottom: 8px;
               }
               div{
-                input{
+                select{
                   padding-left: 12px;
                   padding-right: 12px;
                   position: relative;
@@ -142,7 +142,7 @@
                   border-radius: 4px;
                   display: flex;
                   height: 48px;
-                  width: 94%;
+                  width: 100%;
                 }
               }
               .top-content__search-form--box--main--field--label--category{
