--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -1,9 +1,9 @@
 <main class="animals-main">
   <div class="search_view">
-    <%= form_with(url: search_animals_path, local: true, method: :get, class: "search-form" ) do |f| %>
-      <%= f.collection_select :category, Category.all, :id, :name, include_blank: 'カテゴリを選択' %>
-      <%= f.collection_select :prefecture, Prefecture.all, :id, :name, include_blank: '都道府県を選択'%>
-      <%= f.text_field :keyword, placeholder: "投稿を検索する", class: "search-input"%>
+    <%= form_with(scope: :search, url: search_animals_path, local: true, method: :get, class: "search-form" ) do |f| %>
+      <%= f.collection_select :category_id, Category.all, :id, :name, include_blank: 'カテゴリを選択' %>
+      <%= f.collection_select :prefecture_id, Prefecture.all, :id, :name, include_blank: '都道府県を選択'%>
+      <%= f.text_field :name, placeholder: "投稿を検索する", class: "search-input"%>
       <%= f.submit "検索", class: "search-btn"%>
     <% end %>
   </div>
