エラー解消

--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -145,10 +145,15 @@
             <div class="animal--chatspace__form--comment">
               <p>気になることがあれば、コメントで聞いてみましょう</p>
             </div>
-            <% if current_user %>
+            <% if user_signed_in? %>
               <%= form_with(model: [@animal, @comment], local: true, id: "new_comment") do |f| %>
                 <%= f.text_area :text, placeholder: "コメントする", class: "form__textbox" %>
                 <%= f.submit "Comment", class: "form__submit" %>
+              <% end %>
+            <% else %>
+              <%= form_with(model: [@animal, @comment], local: true, id: "new_comment") do |f| %>
+                <%= f.text_area :text, placeholder: "コメントする", class: "form__textbox" %>
+                <button class= "form__submit">コメントするにはログインが必要です</button>
               <% end %>
             <% end %>
           </div>
@@ -156,20 +161,24 @@
       </div>
     </div>
     <div class="animal--navigation">
-      <% if @animal.giver_id == current_user.id %>
-        <button class="animal_giver">自分が募集した動物の里親になることはできません</button>
-        <div class="giver__buttons">
-          <%= link_to edit_animal_path(@animal.id), class: "giver__buttons--edit" do%>
-            <button>投稿を編集する</button>
+      <% if user_signed_in? %>
+        <% if @animal.giver_id == current_user.id %>
+          <button class="animal_giver">自分が募集した動物の里親になることはできません</button>
+          <div class="giver__buttons">
+            <%= link_to edit_animal_path(@animal.id), class: "giver__buttons--edit" do%>
+              <button>投稿を編集する</button>
+            <% end %>
+            <%= link_to animal_path(@animal.id),class:"giver__buttons--delete", method: :delete do%>
+              <button>投稿を削除する</button>
+            <% end %>
+          </div>
+        <% else %>
+          <%= link_to animal_rooms_path(animal_id: @animal.id ,room: {animal_id: @animal.id, host_id: @animal.giver_id, client_id: current_user.id}), method: :post do%>
+            <button class="animal_taker">里親に応募する</button>
           <% end %>
-          <%= link_to animal_path(@animal.id),class:"giver__buttons--delete", method: :delete do%>
-            <button>投稿を削除する</button>
-          <% end %>
-        </div>
-      <% else %>
-        <%= link_to animal_rooms_path(animal_id: @animal.id ,room: {animal_id: @animal.id, host_id: @animal.giver_id, client_id: current_user.id}), method: :post do%>
-          <button class="animal_taker">里親に応募する</button>
         <% end %>
+      <% else %>
+        <button class="animal_giver">里親に応募するにはログインが必要です</button>
       <% end %>
     </div>
   </div>
