--- a/app/assets/stylesheets/animal_show.scss
+++ b/app/assets/stylesheets/animal_show.scss
@@ -256,6 +256,7 @@
       .form__submit{
         height: 48px;
         width: 100%;
+        font-size: 16px;
         background-color: #aaa;
         border: 1px solid #aaa;
         color: #fff;
