リファクタリング

--- a/app/views/layouts/animals.html.erb
+++ b/app/views/layouts/animals.html.erb
@@ -31,8 +31,8 @@
         </a>    
         <ul class="header--lists">
           <li class="header--lists--list">HELP</li>
-          <li class="header--lists--list">SIGN IN</li>
-          <li class="header--lists--list">SIGN UP</li>
+          <li id="list-signin" class="top-content__header--lists--list sign_button sign_in_button">SIGN IN</li>
+          <li id="list-signup" class="top-content__header--lists--list sign_button sign_up_button">SIGN UP</li>
         </ul>
       <% end %>
     </div>
