--- a/app/assets/stylesheets/header_template.scss
+++ b/app/assets/stylesheets/header_template.scss
@@ -12,6 +12,30 @@
   &--lists{
     display: flex;
     justify-content: space-between;
+    #list-signin{
+      height: 30px;
+      text-align: center;
+      margin-top: 30px;
+      margin-right: 30px;
+      color: #484848;
+      font-weight: 800;
+      cursor: pointer;
+      position: relative;
+      display: inline-block;
+      text-decoration: none;
+    }
+    #list-signup{
+      height: 30px;
+      text-align: center;
+      margin-top: 30px;
+      margin-right: 30px;
+      color: #484848;
+      font-weight: 800;
+      cursor: pointer;
+      position: relative;
+      display: inline-block;
+      text-decoration: none;
+    }
     &--list{
       height: 30px;
       text-align: center;
