Signup Signinモーダルにエラーメッセージの表示
# What
form_withのajaxを利用して非同期通信でエラーメッセージを表示した
# Why
devise標準のsignup signinページにリダイレクトされるのを防ぐため

--- a/app/assets/stylesheets/animal/animal_index.scss
+++ b/app/assets/stylesheets/animal/animal_index.scss
@@ -103,7 +103,7 @@
       left: 0;
       padding-top: 10px;
       &:after{
-        content: "Desided";
+        content: "Decided";
         display: block;
         color: #fff;
         transform: rotate(-45deg);
