--- a/app/assets/stylesheets/animal/animal_show.scss
+++ b/app/assets/stylesheets/animal/animal_show.scss
@@ -27,7 +27,7 @@
       left: 1px;
       padding-top: 10px;
       &:after{
-        content: "Desided";
+        content: "Decided";
         font-size: 20px;
         display: block;
         color: #fff;
