--- a/app/assets/stylesheets/home/mordal.scss
+++ b/app/assets/stylesheets/home/mordal.scss
@@ -5,60 +5,83 @@
 
 .sign_in_modal {
  position: absolute;
- background-color: #fff;
  width: 450px;
- height: 400px;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  border-radius: 5px;
  margin: 100px auto 0;
- border: 1px solid #eee;
  display: none;
  text-align: center;
  display: none;
- i{
-  cursor: pointer;
-  margin-left: 90%;
-  margin-top: 10px;
-  color: #808080;
- }
- h2{
-   padding-top: 30px;
-   padding-bottom: 30px;
-   font-size: 20px;
-   font-weight: 800;
+ &__content{
+   background-color: #fff;
+   border: 1px solid #eee;
+   border-radius: 5px;
+  i{
+    cursor: pointer;
+    margin-left: 90%;
+    margin-top: 10px;
+    color: #808080;
+   }
+   h2{
+     padding-top: 30px;
+     padding-bottom: 30px;
+     font-size: 20px;
+     font-weight: 800;
+   }
+   #signin__errors{
+    margin-top: 20px;
+    text-align: left;
+    padding-left: 57px;
+    &__list{
+      li{
+        color: #3EC1C9;
+      }
+    }    
+   }
  }
 }
 
 .sign_up_modal {
  position: absolute;
- background-color: #fff;
  width: 450px;
- height: 500px;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
- border-radius: 5px;
  margin: 100px auto 0;
- border: 1px solid #eee;
  display: none;
  text-align: center;
  display: none;
- i{
-  cursor: pointer;
-  margin-left: 90%;
-  margin-top: 10px;
-  color: #808080;
- }
- h2{
-   padding-top: 20px;
-   padding-bottom: 20px;
-   font-size: 20px;
-   font-weight: 800;
- }
+ &__content{
+   background-color: #fff;
+   border: 1px solid #eee;
+   border-radius: 5px;
+  i{
+    cursor: pointer;
+    margin-left: 90%;
+    margin-top: 10px;
+    color: #808080;
+   }
+   h2{
+     padding-top: 20px;
+     padding-bottom: 20px;
+     font-size: 20px;
+     font-weight: 800;
+   }
+   #signup__errors{
+     margin-top: 20px;
+     text-align: left;
+     padding-left: 57px;
+     &__list{
+       li{
+         color: #3EC1C9;
+       }
+     }
+   }
+  }
 }
 
 .field{
