--- a/app/views/animals/new.html.erb
+++ b/app/views/animals/new.html.erb
@@ -10,15 +10,20 @@
             <span class="form-require">必須</span>
           </h3>
           <p>最大5枚までアップロードできます</p>
-          <div id="image-box-1">
-            <div class="item-num-0" id="image-box__container">
-              <%= f.fields_for :images do |i| %>
-                <div class="input-area">
-                  <%= i.file_field :image, name:"animal[images_attributes][][image_url]", type: "file", multiple:true, value:"", style: "display:none", id:"img-file" %>
-                  <label for="img-file">
-                    <i class="fas fa-camera"></i>
-                  </label>
-                </div>
+          <div class="post__drop__box__container">
+            <div class="prev-content"></div>
+            <div class="label-content">
+              <label for="animal_images_attributes_0_image" class="label-box" id="label-box--0">
+                <pre class="label-box__text-visible">クリックしてファイルをアップロード</pre>
+              </label>
+            </div>
+            <div class="hidden-content">
+              <%= f.fields_for :images do |image| %>
+                <%= image.file_field :image, class: "hidden-field"%>
+                <input class="hidden-field" type="file" name="animal[images_attributes][1][image]" id="animal_images_attributes_1_image">
+                <input class="hidden-field" type="file" name="animal[images_attributes][2][image]" id="animal_images_attributes_2_image">
+                <input class="hidden-field" type="file" name="animal[images_attributes][3][image]" id="animal_images_attributes_3_image">
+                <input class="hidden-field" type="file" name="animal[images_attributes][4][image]" id="animal_images_attributes_4_image">
               <% end %>
             </div>
           </div>
